Java Predicate Examples added.